FIX - Minor bugfix with overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -25,7 +25,6 @@ html {
 
 body {
   font-family: avenir,sans-serif;
-  overflow-x: hidden
 }
 
 body > header img {
